--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
     <title>Web App</title>
     <meta name="description" content="A web application interface." />
 
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Web App" />
     <meta property="og:description" content="A web application interface." />
-    <meta property="og:image" content="/og.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Web App" />
     <meta name="twitter:description" content="A web application interface." />
-    <meta name="twitter:image" content="/og.png" />
   </head>
   <body>
     <div id="root"></div>
